--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,39 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <!-- <button mat-button>Basic</button> -->
 
-<mat-toolbar>
-  <mat-toolbar-row>
-    <span>My App</span>
-    <span class="example-spacer"></span>
-    <!-- <i class="material-icons">menu</i>
-    <mat-icon class="example-icon">favorite</mat-icon>
-    <mat-icon class="example-icon">delete</mat-icon> -->
-    <!-- <mat-icon class="example-icon">menu</mat-icon> -->
+<div [class.alternative]="otherTheme">
+  <mat-toolbar color="primary">
+    <mat-toolbar-row>
+      <span>My App</span>
+      <span class="example-spacer"></span>
+      <!-- <i class="material-icons">menu</i>
+      <mat-icon class="example-icon">favorite</mat-icon>
+      <mat-icon class="example-icon">delete</mat-icon> -->
+      <!-- <mat-icon class="example-icon">menu</mat-icon> -->
 
-    <button mat-icon-button [matMenuTriggerFor]="menu">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <mat-menu #menu="matMenu">
-      <button mat-menu-item>
-        <mat-icon>dialpad</mat-icon>
-        <span>Redial</span>
+      <button mat-icon-button [matMenuTriggerFor]="menu">
+        <mat-icon>menu</mat-icon>
       </button>
-      <button mat-menu-item disabled>
-        <mat-icon>voicemail</mat-icon>
-        <span>Check voicemail</span>
-      </button>
-      <button mat-menu-item>
-        <mat-icon>notifications_off</mat-icon>
-        <span>Disable alerts</span>
-      </button>
-    </mat-menu>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item>
+          <mat-icon>dialpad</mat-icon>
+          <span>Redial</span>
+        </button>
+        <button mat-menu-item disabled>
+          <mat-icon>voicemail</mat-icon>
+          <span>Check voicemail</span>
+        </button>
+        <button mat-menu-item>
+          <mat-icon>notifications_off</mat-icon>
+          <span>Disable alerts</span>
+        </button>
+      </mat-menu>
 
-  </mat-toolbar-row>
-</mat-toolbar>
+    </mat-toolbar-row>
+  </mat-toolbar>
 
+  <section class="example-section">
+    <button (click)="changeTheme()" mat-raised-button color="primary">Change Theme</button>
+  </section>
+</div>
 <router-outlet></router-outlet>
