--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,3 +6,12 @@
   .example-spacer {
     flex: 1 1 auto;
   }
+
+  .example-section {
+    display:flex;
+    align-content: center;
+    align-items: center;
+    height: 60px;
+    padding-left: 20px;
+    background-color: #919191;
+  }
