--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import '~@angular/material/theming';
+// @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+
+@include mat-core();
+
+$custom-primary: mat-palette($mat-deep-purple, 600);
+$custom-accent: mat-palette($mat-pink, 100);
+
+$custom-theme: mat-light-theme($custom-primary, $custom-accent);
+@include angular-material-theme($custom-theme);
+
+$alt-primary: mat-palette($mat-yellow);
+$alt-accent: mat-palette($mat-grey, 200);
+
+$alt-theme:  mat-dark-theme($alt-primary, $alt-accent);
+
+.alternative {
+    @include angular-material-theme($alt-theme);
+}
